Avoid overlap of times over leaders

--- a/themes/janeswalk/css/screen.css
+++ b/themes/janeswalk/css/screen.css
@@ -11363,7 +11363,13 @@ section.sponsors {
   bottom: -40px;
   min-height: 155px !important;
 }
-/* line 652, pages/sass/walk.scss */
+@media (max-width: 768px) {
+  /* line 647, pages/sass/walk.scss */
+  .profiles {
+    position: static;
+  }
+}
+/* line 657, pages/sass/walk.scss */
 .profiles .profile-inner {
   color: #50616D;
   border: 1px solid #e2eaf2;
@@ -11374,17 +11380,17 @@ section.sponsors {
   display: none;
 }
 @media (max-width: 480px) {
-  /* line 652, pages/sass/walk.scss */
+  /* line 657, pages/sass/walk.scss */
   .profiles .profile-inner {
     margin-bottom: 100px;
   }
 }
-/* line 663, pages/sass/walk.scss */
+/* line 668, pages/sass/walk.scss */
 .profiles .profile-inner small {
   display: block;
   padding-right: 50px;
 }
-/* line 667, pages/sass/walk.scss */
+/* line 672, pages/sass/walk.scss */
 .profiles .profile-inner .bottom-bar {
   position: absolute;
   font-family: "museo-slab", "Roboto Slab", serif;
@@ -11397,13 +11403,13 @@ section.sponsors {
   text-align: center;
   font-size: 14px;
 }
-/* line 678, pages/sass/walk.scss */
+/* line 683, pages/sass/walk.scss */
 .profiles .profile-inner .bottom-bar:hover {
   color: #f16725;
   text-decoration: none;
   background: #cdd5dc;
 }
-/* line 683, pages/sass/walk.scss */
+/* line 688, pages/sass/walk.scss */
 .profiles .profile-inner .bottom-bar:after {
   content: "";
   position: absolute;
@@ -11416,17 +11422,17 @@ section.sponsors {
   border-width: 15px 0 0 15px;
   border-color: transparent transparent transparent #aec4da;
 }
-/* line 696, pages/sass/walk.scss */
+/* line 701, pages/sass/walk.scss */
 .profiles .profile-inner img {
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 480px) {
-  /* line 696, pages/sass/walk.scss */
+  /* line 701, pages/sass/walk.scss */
   .profiles .profile-inner img {
     margin: 0 32%;
   }
 }
-/* line 702, pages/sass/walk.scss */
+/* line 707, pages/sass/walk.scss */
 .profiles .profile-inner .btn-toolbar {
   margin: 17px 0;
   position: absolute;
@@ -11435,7 +11441,7 @@ section.sponsors {
   width: 30px;
   z-index: 5;
 }
-/* line 709, pages/sass/walk.scss */
+/* line 714, pages/sass/walk.scss */
 .profiles .profile-inner .btn-toolbar .btn {
   margin: 0 0 8px 0;
   background: #F4F7FA;
@@ -11447,16 +11453,16 @@ section.sponsors {
   position: relative;
   text-indent: -1px;
 }
-/* line 719, pages/sass/walk.scss */
+/* line 724, pages/sass/walk.scss */
 .profiles .profile-inner .btn-toolbar .btn i {
   display: inline-block;
 }
-/* line 722, pages/sass/walk.scss */
+/* line 727, pages/sass/walk.scss */
 .profiles .profile-inner .btn-toolbar .btn:hover {
   color: #f16725;
   background: #cdd5dc;
 }
-/* line 726, pages/sass/walk.scss */
+/* line 731, pages/sass/walk.scss */
 .profiles .profile-inner .btn-toolbar .btn:after {
   content: "";
   position: absolute;
@@ -11468,23 +11474,23 @@ section.sponsors {
   border-width: 8px 0 0 8px;
   border-color: transparent transparent transparent #aec4da;
 }
-/* line 740, pages/sass/walk.scss */
+/* line 745, pages/sass/walk.scss */
 .profiles .flex-control-nav, .profiles .flex-direction-nav {
   position: absolute;
   margin: 0;
   list-style: none;
   padding: 0;
 }
-/* line 746, pages/sass/walk.scss */
+/* line 751, pages/sass/walk.scss */
 .profiles .flex-control-nav {
   right: 0;
   top: -40px;
 }
-/* line 749, pages/sass/walk.scss */
+/* line 754, pages/sass/walk.scss */
 .profiles .flex-control-nav li {
   display: inline-block;
 }
-/* line 752, pages/sass/walk.scss */
+/* line 757, pages/sass/walk.scss */
 .profiles .flex-control-nav a {
   display: block;
   text-indent: -100%;
@@ -11496,11 +11502,11 @@ section.sponsors {
   margin-left: 5px;
   cursor: pointer;
 }
-/* line 763, pages/sass/walk.scss */
+/* line 768, pages/sass/walk.scss */
 .profiles .flex-control-nav a.flex-active {
   background: #F4F7FA;
 }
-/* line 768, pages/sass/walk.scss */
+/* line 773, pages/sass/walk.scss */
 .profiles #reg-group {
   position: absolute;
   bottom: -20px;
@@ -11508,13 +11514,14 @@ section.sponsors {
   padding-left: 0;
   padding-right: 0;
 }
-@media (max-width: 767px) {
-  /* line 768, pages/sass/walk.scss */
+@media (max-width: 768px) {
+  /* line 773, pages/sass/walk.scss */
   .profiles #reg-group {
-    bottom: -80px;
+    bottom: 0;
+    position: relative;
   }
 }
-/* line 777, pages/sass/walk.scss */
+/* line 784, pages/sass/walk.scss */
 .profiles #reg-group .available-time {
   display: block;
   margin-bottom: 1em;
@@ -11525,55 +11532,55 @@ section.sponsors {
   text-indent: -14px;
   border-bottom: 1px solid #eee;
 }
-/* line 787, pages/sass/walk.scss */
+/* line 794, pages/sass/walk.scss */
 .profiles #reg-group .available-time i {
   margin-right: 5px;
 }
-/* line 791, pages/sass/walk.scss */
+/* line 798, pages/sass/walk.scss */
 .profiles #reg-group .available-time span.divider {
   font-size: 14px;
 }
-/* line 795, pages/sass/walk.scss */
+/* line 802, pages/sass/walk.scss */
 .profiles #reg-group .available-time span.time {
   font-size: 14px;
 }
-/* line 800, pages/sass/walk.scss */
+/* line 807, pages/sass/walk.scss */
 .profiles #reg-group .highlight {
   color: #f16725;
 }
 
-/* line 806, pages/sass/walk.scss */
+/* line 813, pages/sass/walk.scss */
 #register-modal {
   width: 70%;
   margin-left: -35%;
 }
-/* line 809, pages/sass/walk.scss */
+/* line 816, pages/sass/walk.scss */
 #register-modal .modal-body {
   max-height: 380px;
 }
-/* line 811, pages/sass/walk.scss */
+/* line 818, pages/sass/walk.scss */
 #register-modal .modal-body h4 {
   color: #f16725;
 }
-/* line 813, pages/sass/walk.scss */
+/* line 820, pages/sass/walk.scss */
 #register-modal .modal-body h4:first-child {
   margin-top: 0;
 }
-/* line 817, pages/sass/walk.scss */
+/* line 824, pages/sass/walk.scss */
 #register-modal .modal-body p {
   margin-left: 10px;
 }
 
-/* line 823, pages/sass/walk.scss */
+/* line 830, pages/sass/walk.scss */
 .share-print {
   font-size: 1.25em;
 }
-/* line 825, pages/sass/walk.scss */
+/* line 832, pages/sass/walk.scss */
 .share-print a {
   padding-right: 40px;
 }
 @media (max-width: 480px) {
-  /* line 823, pages/sass/walk.scss */
+  /* line 830, pages/sass/walk.scss */
   .share-print {
     margin-bottom: 2em;
   }
